--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rapid",
+  "name": "rapidx2j",
   "version": "0.0.1",
   "description": "Node.js XML to JSON using rapidXML",
-  "main": "addon.js",
+  "main": "index.js",
   "private": true,
   "gypfile": true,
   "files": [
