Update nan. Bump version.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rapidx2j",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Node.js XML to JSON using rapidXML",
   "main": "index.js",
   "types": "types/index.d.ts",
@@ -8,7 +8,7 @@
   "gypfile": true,
   "scripts": {
     "install": "node-gyp rebuild",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "mocha"
   },
   "files": [
     "src",
@@ -17,15 +17,15 @@
     "package.json"
   ],
   "dependencies": {
-    "cmake-js": "^7.3.0",
-    "nan": "^2.18.0"
+    "cmake-js": "^7.3.1",
+    "nan": "^2.23.0"
   },
   "directories": {
     "test": "test"
   },
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "mocha": "^8.3.0"
+    "@types/node": "^24.9.1",
+    "mocha": "^11.7.4"
   },
   "repository": {
     "type": "git",
